--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.2",
+    "sha256": "^0.2.0",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.2",
     "wavesurfer.js": "^6.6.3",
